--- a/birthday-project/src/Components/TextEffects/HorizontalFlow/HorizontalFlow.scss
+++ b/birthday-project/src/Components/TextEffects/HorizontalFlow/HorizontalFlow.scss
@@ -12,11 +12,5 @@
 	min-width: 4px;
 	opacity: 1;
 	transform: translateX(-100vw);
-	animation: horizontalFlow 0.8s ease forwards;
+	// animation: horizontalFlow 0.8s ease forwards;
 }
-
-// @for $i from 1 through 1000 {
-// 	.HorizontalFlow > .Container > .Content:nth-child(#{$i}n) {
-// 		animation-delay: #{$i * 0.3}s;
-// 	}
-// }
