--- a/birthday-project/src/Components/Header/Header.scss
+++ b/birthday-project/src/Components/Header/Header.scss
@@ -1,6 +1,10 @@
 .Header {
-	border: 2px solid green;
+	// border: 2px solid green;
 	width: 100vw;
-	height: 100px;
 	display: block;
+}
+
+.Heading {
+	text-align: center;
+	font-size: 6vw;
 }
