--- a/birthday-project/src/Components/Base/Base.scss
+++ b/birthday-project/src/Components/Base/Base.scss
@@ -1,7 +1,7 @@
 .Base {
 	width: 100vw;
 	height: 100vh;
-	border: 2px solid black;
+	// border: 2px solid black;
 	display: grid;
 	grid-template-rows: auto 1fr auto;
 }
