--- a/birthday-project/src/Components/Main/Main.scss
+++ b/birthday-project/src/Components/Main/Main.scss
@@ -1,5 +1,5 @@
 .Main {
-	border: 2px solid gold;
+	// border: 2px solid gold;
 	width: 100vw;
 	height: 100%;
 	display: block;
@@ -17,9 +17,28 @@
 .Stage0Buttons > .Buttons {
 	opacity: 0;
 	animation: makeVisible 2s ease-in-out forwards;
+	font-size: 1.5em;
 	// animation-delay: 36s;
 }
 
 .Emoji {
 	font-size: 10em;
+}
+
+.Main {
+	height: 100%;
+	width: 100vw;
+	display: grid;
+	grid-template-rows: 1fr auto;
+}
+
+.Stage0Buttons {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	height: 100%;
+}
+
+.Stage0 {
+	display: grid;
+	align-items: center;
 }
