Initial Quiz created

--- a/birthday-project/src/Components/Main/Main.scss
+++ b/birthday-project/src/Components/Main/Main.scss
@@ -18,7 +18,7 @@
 	opacity: 0;
 	animation: makeVisible 2s ease-in-out forwards;
 	font-size: 1.5em;
-	// animation-delay: 32s;
+	animation-delay: 32s;
 }
 
 .Emoji {
