--- a/birthday-project/src/Components/Base/Base.scss
+++ b/birthday-project/src/Components/Base/Base.scss
@@ -1,6 +1,6 @@
 .Base {
 	width: 100vw;
-	height: 100vh;
+	height: calc(100vh - 40px);
 	// border: 2px solid black;
 	display: grid;
 	grid-template-rows: auto 1fr auto;
